--- a/xmlLabCSS.css
+++ b/xmlLabCSS.css
@@ -4,9 +4,9 @@ table
   font-family:arial, monospace;
   width: 100%;
   margin: 0 auto;
+
   border-collapse: separate;
-  border-spacing: 0;
-  border: 0;
+  border-spacing: 0;  border: 0;
   text-shadow: 0 1px 0 #fff;
   margin-top:20px;
   margin-bottom:20px;
@@ -17,7 +17,7 @@ td
   font-family:arial, monospace;
   height: 50px;
   padding: 0 20px;
-  border-bottom: 1px solid #cdcdcd;
+  border-bottom: 0px;
   box-shadow: 0 1px 0 white;
   -moz-box-shadow: 0 1px 0 white;
   -webkit-box-shadow: 0 1px 0 white;
