--- a/xmlLabCSS.css
+++ b/xmlLabCSS.css
@@ -1,53 +1,51 @@
-table
-{
-  padding: 10px;
-  font-family:arial, monospace;
-  width: 100%;
-  margin: 0 auto;
-
-  border-collapse: separate;
-  border-spacing: 0;  border: 0;
-  text-shadow: 0 1px 0 #fff;
-  margin-top:20px;
-  margin-bottom:20px;
-}
- 
-td
-{
-  font-family:arial, monospace;
-  height: 25px;
-  padding: 0 20px;
-  border-bottom: 0px;
-  box-shadow: 0 1px 0 white;
-  -moz-box-shadow: 0 1px 0 white;
-  -webkit-box-shadow: 0 1px 0 white;
-  text-align: center;
-  vertical-align: middle;
-  display: table-cell;
+#newParameter {
+    display: none;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 2px double black;
 }
 
-input[type=text] , select
-{
-  font-family:arial, monospace;
-  padding: 0 20px;
-  box-shadow: 0 1px 0 white;
-  -moz-box-shadow: 0 1px 0 white;
-  -webkit-box-shadow: 0 1px 0 white;
-  text-align: center;
-  vertical-align: middle;
+.button {
+    width: 100px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
-a:link{
-  font-family:arial, monospace;
-  text-decoration: none;
-  color: teal;
+.deleteButton {
+    width: 100px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
-a:hover{
-  text-decoration: underline;
+.parameter {
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 2px double black;
 }
 
-a:visited{
-  color:black;
-  text-decoration: none;
+.parameterID {
+    margin-bottom: 10px;
+    font-size: 13px;
+}
+
+.parameterName {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.parameterDescription {
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.parameterSettings {
+    margin-bottom: 10px;
+    font-size: 16px;
 }
